<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center"
    android:layout_height="match_parent"
    android:background="@drawable/white_bg_3"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_margin="12dp"
        android:paddingBottom="30dp"
       >




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:gravity="right"
            android:layout_marginTop="10dp"
            android:layout_marginRight="15dp">
        <ImageView
            android:id="@+id/iv_cross"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:src="@drawable/cross"
            android:foregroundGravity="right"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="6dp"
            android:text="@string/start_quitting_smoking"
            android:textColor="@color/green"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="12dp"
            android:text="TEXT FROM API"
            android:textColor="@color/green"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/day_of_quitting"
            android:textSize="16dp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/tv_day_of_quitting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="16dp"
            android:textColorHint="@color/gray"
            android:text="dd/mm/yyy" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginRight="26dp"
            android:layout_marginLeft="26dp"
            android:layout_marginTop="10dp"
            android:background="@color/gray"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/hour_of_quitting"
                android:textSize="16dp"
                android:textColor="@color/black"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="16dp"
                android:layout_gravity="center"
                android:gravity="center">

                <ImageView
                    android:id="@+id/iv_minus"
                    android:layout_width="40dp"
                    android:layout_height="30dp"
                    android:background="@color/green"
                    android:layout_marginRight="8dp"
                    />
                <TextView
                    android:id="@+id/tv_hours_of_quitting"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textSize="15dp"
                  android:textColor="@color/black"
                    android:text="10" />

                <ImageView
                    android:id="@+id/iv_plus"
                    android:layout_width="40dp"
                    android:layout_height="30dp"
                    android:background="@color/green"
                    android:layout_marginRight="8dp"
                    android:layout_marginLeft="10dp"
                    />

            </LinearLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginRight="26dp"
                android:layout_marginLeft="26dp"
                android:layout_marginTop="10dp"
                android:background="@color/gray"/>





            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/packs_per_day"
                android:textSize="16dp"
                android:textColor="@color/black"/>

            <EditText
                android:id="@+id/tv_packs_per_day"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:background="@null"
                android:maxLines="1"
                android:inputType="number"
                android:layout_marginTop="16dp"
                android:textColor="@color/black"
                android:text="2" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginRight="26dp"
                android:layout_marginLeft="26dp"
                android:layout_marginTop="10dp"
                android:background="@color/gray"/>



            <Button
                android:id="@+id/btn_save_dialog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:background="@drawable/green_button"
                android:textColor="@color/white"
                android:text="@string/save"
             />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>